# chat-in-ng

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Arena.vue  Login.vue  MessagePanel.vue
